<resources>
    <string name="app_name">AndroidMaster</string>
    <string name="hello_world">Hello world</string>
    <string name="text4">text4</string>
    <string name="push_me">Push me</string>
    <string name="type_your_name">Type your name</string>
    <string name="hi">Hi</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="_120_cm">120 cm</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="calculate">Calculate</string>
    <string name="result">Your Result</string>
    <string name="recalculate">Re-calculate</string>
    <string name="error">Error</string>
    <string name="low_weight">Low Weight</string>
    <string name="over_weight">Over weight</string>
    <string name="normal_weight">Normal weight</string>
    <string name="obesity">Obesity</string>
    <string name="you_are_below_optimal_for_your_weight_and_height">"You are below optimal for your weight and height "</string>
    <string name="you_are_within_the_normal_range_for_your_weight_and_height">You are within the normal range for your weight and height.</string>
    <string name="you_are_above_the_normal_range_for_your_weight_and_height">You are above the normal range for your weight and height</string>
    <string name="you_are_well_above_the_normal_range_for_your_weight_and_height">You are well above the normal range for your weight and height.</string>
    <string name="todo">ToDo</string>
    <string name="saludapp">SaludApp</string>
    <string name="imc_app">IMC App</string>
    <string name="list_items">List Items</string>
    <string name="todo_categories">Categories</string>
    <string name="todo_tasks">Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="bussines">Bussines</string>
    <string name="personal">Personal</string>
    <string name="other">Other</string>
    <string name="create_task">Create task</string>
    <string name="superheroapp">SuperHeroApp</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark mode</string>
    <string name="turn_on_dark_mode_to_moderate_brightness">Turn on dark mode to moderate brightness</string>
    <string name="settingsTitle">Settings</string>
    <string name="activate_to_turn_on_or_off_bluetooth">Activate to turn on or off bluetooth</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="move_left_or_right_to_turn_the_volume_up_or_down">Move left or right to turn the volume up or down</string>
    <string name="volume">Volume</string>
    <string name="turn_on_or_off_to_restrict_audio">Turn on or off to restrict audio</string>
    <string name="mute">Mute</string>
    <string name="vibration">Vibration</string>
</resources>