<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="80dp"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <Button

        android:id="@+id/btnSaludApp"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:text="@string/saludapp"

        />

    <Button

        android:id="@+id/btnIMCApp"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginTop="1dp"
        android:text="@string/imc_app"

        />

    <Button

        android:id="@+id/btnToDo"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:text="@string/todo"

        />

    <Button

        android:id="@+id/btnSuperhero"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:text="@string/superheroapp"

        />

    <Button

        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:text="@string/settings"

        />


</LinearLayout>